--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 body{
     display: flex;
-  flex-direction: column;
+    flex-direction: column;
 }
 h1{
     text-align: center;
@@ -33,8 +33,38 @@ button{
   }
   
   #footer {
-    position: absolute;
+    display: inline;
     bottom: 0;
     width: 20%;
     height: 2.5rem;            /* Footer height */
   }
+
+  nav{
+    background-color: cornflowerblue;
+    padding: 10px;
+  }
+
+  nav ul{
+    list-style-type: none;
+    margin: 0;
+  }
+
+  nav li{
+    display: inline;
+    margin-right: 25px;
+  }
+
+  nav a{
+    color: white;
+    font-size: 1.5em;
+  }
+
+  nav a:hover {
+    color: pink;
+    text-decoration: none;
+  }
+
+  /* main{
+    margin-right: 20px;
+    margin-left: 20px; 
+  } */
