--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,11 @@ h1{
 } 
 img{
     width: 600px;
-    height: 400px;
+    height: 400px;   
+}
+#homeImg{
+  width: 80vmax;
+  height: 50vmax;
 }
 .home-menu
 {
@@ -42,6 +46,12 @@ button{
   nav{
     background-color: cornflowerblue;
     padding: 10px;
+    width: 80vmax;
+    display: flex;
+    justify-content:space-around;
+    align-items: center;
+    
+    
   }
 
   nav ul{
@@ -50,13 +60,15 @@ button{
   }
 
   nav li{
-    display: inline;
     margin-right: 25px;
+    margin-left: 1cm;
+    
+    
   }
 
   nav a{
     color: white;
-    font-size: 1.5em;
+    font-size: 3vmax;
   }
 
   nav a:hover {
